theme: Fix shifted navbar due to recent border-box changes

--- a/theme/static/css/custom.css
+++ b/theme/static/css/custom.css
@@ -115,6 +115,7 @@ i.fas, i.fab {
 .navbar .navbar-main {
     display: flex;
     justify-content: space-between;
+    height: 100%;
 }
 .navbar + .docs-section {
     border-top-width: 0;
@@ -160,6 +161,7 @@ i.fas, i.fab {
     vertical-align: middle;
 }
 .navbar-link {
+    height: 100%;
     text-transform: uppercase;
     font-size: 1.3rem;
     font-weight: 600;
@@ -287,6 +289,7 @@ img.responsive {
 
 .navbar-download-button .button {
     width: 100%;
+    margin: 0;
 }
 
 .navbar-download-button .navbar-link {
@@ -344,7 +347,7 @@ img.responsive {
     overflow: hidden;
     margin: 0;
     position: absolute;
-    top: 50px;
+    top: 48px;
     right: 0;
     width: calc(100% - 4rem);
     display: block;
@@ -373,7 +376,8 @@ img.responsive {
 }
 
 .navbar-hamburger-button:checked ~ .navbar-hamburger-content {
-    border: 1px solid var(--border-color-softer);
+    border-top: 1px solid var(--border-color-softer);
+    border-bottom: 1px solid var(--border-color-softer);
     padding: 2rem;
     max-height: unset;
 }
